<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TodoItemDetailsFragment">

    <android.support.v7.widget.CardView
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        app:contentPadding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/task_description"
                    android:layout_width="wrap_content"
                    android:paddingStart="35dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                    android:text="@string/description" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
                    android:text="@string/status" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/taskStatus"
                    android:layout_width="wrap_content"
                    android:paddingStart="35dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                    android:text="@string/taskStatus" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
                    android:text="@string/created_on" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/dueDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="35dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                    android:text="@string/dueDateTime" />
            </TableRow>

        </TableLayout>

    </android.support.v7.widget.CardView>




</android.support.constraint.ConstraintLayout>