<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="25dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_section_text_input_layout"
        android:layout_width="match_parent"
        android:theme="@style/PopUp"
        android:layout_height="wrap_content">

        <EditText
            android:autofillHints="Add a list"
            android:id="@+id/new_section_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_section_title"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.button.MaterialButton
        android:id="@+id/new_section_add_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        android:text="@string/add_section"
        android:textColor="@android:color/background_light"
        android:theme="@style/Theme.MaterialComponents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/new_section_cancel"
        app:layout_constraintTop_toBottomOf="@+id/new_section_text_input_layout" />

    <android.support.design.button.MaterialButton
        android:id="@+id/new_section_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@android:color/white"
        android:stateListAnimator="@null"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/new_section_add_section"
        app:layout_constraintEnd_toStartOf="@+id/new_section_add_section"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_section_text_input_layout" />

</android.support.constraint.ConstraintLayout>